@@ -107,8 +107,8 @@ function rcmail_toggle_display(id)
 <roundcube:label name="charset" />:&nbsp;<roundcube:object name="charsetSelector" tabindex="8" />
 </td>
 <td align="right">
- <roundcube:label name="editortype" />:&nbsp;<roundcube:object name="editorSelector" tabindex="9" />
-</td>
+ <roundcube:label name="editortype" />:&nbsp;</td>
+<roundcube:object name="editorSelector" tabindex="9" />
 </tr></tbody></table>
 
 </td>
